src/minio-config-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: minio
  name: minio
spec:
  volumes:
    - name: cdrive
      hostPath:
        type: directory
        path: /c/minio
  containers:
    - command:
        - minio
        - server
        - /data
      image: minio/minio:RELEASE.2019-12-17T23-16-33Z
      volumeMounts:
        - name: cdrive
          mountPath: /data
      lifecycle:
        postStart:
          exec:
            command:
              - mkdir
              - -p
              - /data/my-bucket
      livenessProbe:
        httpGet:
          path: /minio/health/live
          port: 9000
        initialDelaySeconds: 5
        periodSeconds: 10
      name: main
      ports:
        - containerPort: 9000
      readinessProbe:
        httpGet:
          path: /minio/health/ready
          port: 9000
        initialDelaySeconds: 5
        periodSeconds: 10
