src/minio-config.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: minio
  name: minio
spec:
  volumes:
    - name: nfs-volume
      nfs:
        server: 192.168.8.2
        path: /export/lmmp/pipeline
  containers:
    - command:
        - minio
        - server
        - /data
      image: minio/minio:RELEASE.2019-12-17T23-16-33Z
      volumeMounts:
        - name: nfs-volume
          mountPath: /data
      lifecycle:
        postStart:
          exec:
            command:
              - mkdir
              - -p
              - /data/my-bucket
      livenessProbe:
        httpGet:
          path: /minio/health/live
          port: 9000
        initialDelaySeconds: 5
        periodSeconds: 10
      name: main
      ports:
        - containerPort: 9000
      readinessProbe:
        httpGet:
          path: /minio/health/ready
          port: 9000
        initialDelaySeconds: 5
        periodSeconds: 10
