src/ports.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
spec:
  type: NodePort
  ports:
    - port: 2746
      targetPort: 2746
      nodePort: 32019
  selector:
    app: argo-server
