src/ingress-example.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sstmp-ingressroute
  namespace: default
spec:
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - kind: Service
          name: argo-server
          port: 2746
          namespace: default
      middlewares:
        - name: security-headers
    - match: PathPrefix(`/moonui`)
      kind: Rule
      services:
        - kind: Service
          name: moonui
          port: 1234
          namespace: default
      middlewares:
        - name: security-headers
    - match: PathPrefix(`/minio`)
      kind: Rule
      services:
        - kind: Service
          name: minio
          port: 9000
          namespace: default
      middlewares:
        - name: security-headers
# Obtain a keypair for your domain (.crt and .key file), and then create a k8s tls secret using:
# sudo kubectl create secret tls your-tls-secret --cert /path/to/your.crt --key /path/to/your.key
# Then, put the secret name in the section below and uncomment it.

#  tls:
#    secretName: your-tls-secret
#    domains:
#      - main: your.domain
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security-headers
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    #HSTS
    stsIncludeSubdomains: true
    stsSeconds: 31536000
---
